@@ -1,6 +1,8 @@
 Revision history for Perl extension Wx::GLCanvas.
 
 0.08
+	- Add attribute list parameter to wxGLCanvas constructor
+	  and wrap WX_GL_* constants.
 
 0.07  Sun Jun 29 21:28:45 CEST 2008
 	- Try to fail gracefully if wxPerl has not been
